# cryptaffinity

./: AUTHORS  Makefile.am  README.md  configure.in  doxygen.conf
data/: Makefile.am  frequencies.txt  priority.txt
demo/: affine.txt  plaintext.txt
doc/: Makefile.am  index.html
doc/demo/: vigenere.2.txt  vigenere.3.txt  vigenere.txt
doc/html/: cryptafinity.css
src/: Makefile.am  runAfine.sh  runVigenere.sh
src/lib/: Makefile.am  alphabet.cpp  alphabet.hh  codec.cpp  codec.hh  codec_affine.cpp  codec_affine.hh  codec_afine.cpp  codec_afine.hh  codec_vigenere.cpp  codec_vigenere.hh  cryptaffinity.hh  cryptaffinity_global.hh  cryptaffinity_iface.hh  cryptaffinity_proto.hh  cryptafinity.hh  cryptafinity_global.hh  cryptafinity_iface.hh  cryptafinity_proto.hh  freq_analyser.cpp  freq_analyser.hh  key.cpp  key.hh  key_affine.cpp  key_affine.hh  key_afine.cpp  key_afine.hh  key_vigenere.cpp  key_vigenere.hh  letter.cpp  letter.hh  math_tools.cpp  math_tools.hh  text.cpp  text.hh  word_list.cpp  word_list.hh
src/tools/: Makefile.am  ba_affine.cpp  ba_afine.cpp  ba_cmd.cpp  ba_cmd.hh  ba_config.cpp  ba_config.hh  ba_vigenere.cpp  breakaffinity.hh  breakaffinity_global.hh  breakaffinity_iface.hh  breakaffinity_proto.hh  breakafinity.hh  breakafinity_global.hh  breakafinity_iface.hh  breakafinity_proto.hh  file_loader.cpp  file_loader.hh  main.cpp
