
cryptafinityhtmldir = $(docdir)/cryptafinity/html

cryptafinityhtml_DATA = \
					   html/index.html \
					   html/cryptafinity.css 

cryptafinitydemodir = $(docdir)/cryptafinity/demo

cryptafinitydemo_DATA = \
						demo/vigenere.txt \
						demo/afine.txt \
						demo/plaintext.txt \
						demo/vigenere.2.txt \
						demo/vigenere.3.txt

EXTRA_DIST = \
			 $(cryptafinityhtml_DATA)
			 $(cryptafinitydemo_DATA)

